--- a/www/txat/index.html
+++ b/www/txat/index.html
@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="scripts/Txat/View.js"></script>
 		<script type="text/javascript" src="scripts/Txat/Application.js"></script>
 		<script type="text/javascript" src="scripts/LCDTimer.js"></script>
+		<script type="text/javascript" src="scripts/Txat/help.fr.js"></script>
 		<!-- STARTUP -->
 		<script type="text/javascript" src="scripts/main.js"></script>
 	</head>
