Ajout de l'addon sound.
Commandes utils :

	/sound on
	/sound off
	/sound status

Correction erreur de syntaxe txtatgray-colors.css

--- a/www/txat/scripts/Txat/addons/sound/index.html
+++ b/www/txat/scripts/Txat/addons/sound/index.html
@@ -2,3 +2,4 @@
 <script type="text/javascript" src="/libraries/jquery-plugins/imageLoader.jquery.js"></script>
 <script type="text/javascript" src="scripts/Txat/addons/avatar/avatar.js"></script>
 
+<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
