Ajout de la fenêtre de gestion du son

--- a/www/txat/scripts/Txat/addons/sound/index.html
+++ b/www/txat/scripts/Txat/addons/sound/index.html
@@ -1,1 +1,2 @@
+<link rel="stylesheet" href="scripts/Txat/addons/sound/sound.css">
 <script type="text/javascript" src="scripts/Txat/addons/sound/sound.js"></script>
